from datetime import datetime
from enum import Enum

from sqlalchemy import Boolean, DateTime, String
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.models.base import Base


class UserRole(str, Enum):
    BUYER = "buyer"
    SELLER = "seller"
    ADMIN = "admin"


class User(Base):
    __tablename__ = "users"

    id: Mapped[int] = mapped_column(primary_key=True)

    email: Mapped[str] = mapped_column(
        String(255),
        unique=True,
        index=True,
        nullable=False,
    )
    username: Mapped[str] = mapped_column(
        String(100),
        unique=True,
        index=True,
        nullable=False,
    )
    hashed_password: Mapped[str] = mapped_column(
        String(255),
        nullable=False,
    )
    role: Mapped[str] = mapped_column(
        String(20),
        default=UserRole.BUYER.value,
        nullable=False,
    )
    is_active: Mapped[bool] = mapped_column(
        Boolean,
        default=True,
        nullable=False,
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime,
        default=datetime.utcnow,
        nullable=False,
    )

    products = relationship(
        "Product",
        back_populates="seller",
    )
    
    orders = relationship(
        "Order",
        back_populates="buyer",
    )

    reviews = relationship(
        "Review",
        back_populates="buyer",
    )

    favorites = relationship(
        "Favorite",
        back_populates="user",
    )

    buyer_chat_threads = relationship(
        "ChatThread",
        foreign_keys="ChatThread.buyer_id",
        back_populates="buyer",
    )

    seller_chat_threads = relationship(
        "ChatThread",
        foreign_keys="ChatThread.seller_id",
        back_populates="seller",
    )

    chat_messages = relationship(
        "ChatMessage",
        back_populates="sender",
    )
